# CorpuScan

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  bun.lockb  index.html  tailwind.config.ts
.cursor/rules/: hera-api.mdc
33/16ba6f05bc/: metadata.json
43/fbea43ecb1/: metadata.json
47/08680c5f63/: metadata.json
55/3c84d53405/: metadata.json
59/ec6b8a2c1c/: metadata.json
62/d192385c4c/: metadata.json
77/dc32dbe03b/: metadata.json
77/fee56b1591/: metadata.json
79/e39f6c4f53/: metadata.json
87/bd08364247/: metadata.json
95/e152124838/: metadata.json
a3/5f55830e17/: metadata.json
ac/cb29144bad/: metadata.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  logging.yaml  pyproject.toml  requirements.txt
backend/app/: config.py  ingest.py  jobs.py  logging_utils.py  main.py  pipeline.py  render.py  schemas.py
backend/app/agents/: _prompts.py  finance.py  hera.py  scripter.py
backend/app/integrations/: elevenlabs.py  gemini.py  hera.py  tavily.py
backend/app/prompts/: finance.yaml  hera.yaml  scripter.yaml
backend/src/corpuscan_backend/: __init__.py
backend/tests/: test_hera_poll.py  test_pdf_mode.py  test_pipeline_hera_retry.py
c6/ef9feada36/: metadata.json
d1/97651998cf/: metadata.json
d4/52c814857d/: metadata.json
d9/9b9a330771/: metadata.json
db/e504878c33/: metadata.json
docs/: PRD.md  TASK.md  agent-prompts.md  branding.md  hera-api.md  logo-prompt.md  lovable-prompt.md
frontend/: README.md  index.html  package-lock.json  tailwind.config.ts
src/: App.tsx  index.css
(+129 files in other folders)
